<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTarih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="date"
            android:minHeight="48dp"
            android:padding="12dp"
            android:hint="@string/hint_tarih" />







        <EditText
            android:id="@+id/editKazanc"
            android:hint="@string/hint_kazanc"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:inputType="numberDecimal"
            android:autofillHints="moneyAmount"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editBahsis"
            android:hint="@string/hint_bahsis"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:inputType="numberDecimal"
            android:autofillHints="moneyAmount"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editMasraf"
            android:hint="@string/hint_masraf"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:inputType="numberDecimal"
            android:autofillHints="moneyAmount"
            android:padding="12dp" />

        <Spinner
            android:id="@+id/spinnerKonum"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            />

        <EditText
            android:id="@+id/editAciklama"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_aciklama"
            android:inputType="textMultiLine"
            android:lines="3"
            android:gravity="top"
            android:layout_marginTop="8dp"
            android:autofillHints="free_form" />


        <Button
            android:id="@+id/btnKaydet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_kaydet" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
